--- a/app/src/main/res/layout/fragment_basic_frag.xml
+++ b/app/src/main/res/layout/fragment_basic_frag.xml
@@ -15,13 +15,13 @@
         <TextView
 
             android:id="@+id/Viewone"
-            android:layout_width="165dp"
-            android:layout_height="55dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
 
             android:layout_marginTop="52dp"
 
 
-            android:text="@string/welcome"
+           android:hint="@string/welcome"
             android:textSize="30sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
