--- a/app/src/main/res/layout/fragment_basic_frag.xml
+++ b/app/src/main/res/layout/fragment_basic_frag.xml
@@ -1,37 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/Testing"
-        android:layout_width="match_parent"
-        android:fillViewport="true"
-        android:layout_height="match_parent">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:background="@color/gold"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/RecycleList"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Viewone"></androidx.recyclerview.widget.RecyclerView>
 
+    <TextView
             android:id="@+id/Viewone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
-            android:layout_marginTop="52dp"
-
-
-           android:hint="@string/welcome"
+            android:layout_marginTop="40dp"
+            android:hint="@string/welcome"
             android:textSize="30sp"
-            app:layout_constraintStart_toStartOf="parent"
+        android:background="@color/blue"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-    </ScrollView>
+
 
 
 
