--- a/app/src/main/res/layout/layouts.xml
+++ b/app/src/main/res/layout/layouts.xml
@@ -5,18 +5,34 @@
     android:layout_width="match_parent"
     android:background="@color/teal_200"
     android:layout_height="wrap_content">
+
     <TextView
         android:id="@+id/cards"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginStart="52dp"
+
+        android:layout_marginEnd="20dp"
         android:hint="@string/cricketer"
-        android:textSize="30sp"
         android:text=""
         android:textColor="@color/blue"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="@+id/imageView" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="111dp"
+        android:layout_height="88dp"
+        android:layout_marginVertical="32dp"
+        android:layout_marginStart="36dp"
+
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/raina" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
