--- a/app/src/main/res/layout/layouts.xml
+++ b/app/src/main/res/layout/layouts.xml
@@ -3,22 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/teal_200"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/teal_200">
 
     <TextView
         android:id="@+id/cards"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="52dp"
-
+        android:layout_marginStart="88dp"
         android:layout_marginEnd="20dp"
+        android:layout_marginBottom="40dp"
         android:hint="@string/cricketer"
         android:text=""
         android:textColor="@color/blue"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="@+id/imageView" />
 
@@ -32,7 +33,20 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/raina" />
+        tools:ignore="ContentDescription" />
+
+    <TextView
+        android:id="@+id/special"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:hint="@string/special"
+        android:text=""
+        android:textColor="@color/gold"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="@+id/cards"
+        app:layout_constraintStart_toStartOf="@+id/cards"
+        app:layout_constraintTop_toBottomOf="@+id/cards" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
