--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="black">#FF000000</color>
     <color name="blue">#5b39c6</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="Misty_rose">#FFE4E1</color>
+
 </resources>
