--- a/app/src/main/res/layout/layouts.xml
+++ b/app/src/main/res/layout/layouts.xml
@@ -7,46 +7,43 @@
     android:background="@color/teal_200">
 
     <TextView
-        android:id="@+id/cards"
+        android:id="@+id/player_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="88dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="40dp"
         android:hint="@string/cricketer"
-        android:text=""
         android:textColor="@color/blue"
         android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintBottom_toBottomOf="@+id/player_img"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView" />
+        app:layout_constraintStart_toEndOf="@+id/player_img"
+        app:layout_constraintTop_toTopOf="@+id/player_img" />
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="111dp"
-        android:layout_height="88dp"
-        android:layout_marginVertical="32dp"
+        android:id="@+id/player_img"
+        android:layout_width="132dp"
+        android:layout_height="100dp"
         android:layout_marginStart="36dp"
-
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="ContentDescription" />
 
     <TextView
-        android:id="@+id/special"
+        android:id="@+id/player_spl"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:hint="@string/special"
-        android:text=""
         android:textColor="@color/gold"
         android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="@+id/cards"
-        app:layout_constraintStart_toStartOf="@+id/cards"
-        app:layout_constraintTop_toBottomOf="@+id/cards" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/player_name"
+        app:layout_constraintStart_toStartOf="@+id/player_name"
+        app:layout_constraintTop_toBottomOf="@+id/player_name" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
