--- a/app/src/main/res/layout/text_card.xml
+++ b/app/src/main/res/layout/text_card.xml
@@ -1,24 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
     android:layout_width="match_parent"
-    android:background="@color/teal_200"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/teal_200">
 
     <TextView
         android:id="@+id/name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-
-        android:layout_marginTop="24dp"
-        android:hint="@string/textarea"
-        android:text=""
-        android:textColor="@color/gold"
         android:layout_marginHorizontal="30dp"
+        android:hint="@string/textarea"
+        android:textColor="@color/white"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
-
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -26,11 +21,9 @@
         android:id="@+id/phone"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="20dp"
-
+        android:layout_marginTop="20dp"
         android:hint="@string/textarea"
-        android:text=""
-        android:textColor="@color/gold"
+        android:textColor="@color/purple_500"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/name"
