--- a/app/src/main/res/layout/activity_firstpage.xml
+++ b/app/src/main/res/layout/activity_firstpage.xml
@@ -1,121 +1,124 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true"
+    android:background="@color/teal_200"
     tools:context=".views.Firstpage">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/username_text"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/teal_200">
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="36dp"
+        android:background="@color/teal_200"
+        android:padding="12dp"
+        android:text="@string/username"
+        android:textColor="@color/username_color"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/login_welcome" />
 
-        <TextView
-            android:id="@+id/username_text"
-            android:layout_width="wrap_content"
+
+    <TextView
+        android:id="@+id/password_text"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="44dp"
+        android:background="@color/teal_200"
+        android:padding="12dp"
+        android:text="@string/password"
+        android:textColor="#004D40"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="@+id/username_text"
+        app:layout_constraintStart_toStartOf="@+id/username_text"
+        app:layout_constraintTop_toBottomOf="@+id/username_text" />
+
+    <TextView
+        android:id="@+id/login_welcome"
+        android:layout_width="208dp"
+        android:layout_height="83dp"
+        android:layout_marginTop="180dp"
+        android:background="@color/purple_200"
+        android:paddingTop="12dp"
+        android:text="@string/login"
+        android:textAlignment="center"
+        android:textColor="#5E35B1"
+        android:textSize="40sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/login_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="16dp"
+        android:text="@string/login"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toBottomOf="@+id/signup_btn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/signup_btn"
+        app:layout_constraintTop_toTopOf="@+id/signup_btn"
+        tools:ignore="DuplicateSpeakableTextCheck" />
+
+    <Button
+        android:id="@+id/signup_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="64dp"
+        android:text="@string/signup"
+        android:textSize="30sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/password_text" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/username_input"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="20dp"
+        app:counterEnabled="true"
+        app:counterMaxLength="15"
+        app:errorEnabled="true"
+        app:layout_constraintBottom_toBottomOf="@+id/username_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/username_text"
+        app:layout_constraintTop_toTopOf="@+id/username_text">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/username_margin_start"
-            android:layout_marginTop="40dp"
-            android:background="@color/teal_200"
-            android:padding="12dp"
-            android:text="@string/username"
-            android:textColor="@color/username_color"
-            android:textSize="16sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/login_welcome" />
+            android:hint="@string/enter_username" />
 
-        <EditText
-            android:id="@+id/user_input"
-            android:layout_width="0dp"
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/password_input"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:errorEnabled="true"
+        app:layout_constraintBottom_toBottomOf="@+id/password_text"
+        app:layout_constraintEnd_toEndOf="@id/username_input"
+        app:layout_constraintStart_toStartOf="@id/username_input"
+        app:layout_constraintTop_toTopOf="@+id/password_text">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="50dp"
-            android:layout_marginEnd="20dp"
-            android:hint="@string/enter_username"
-            android:importantForAutofill="no"
-            android:inputType="textEmailAddress"
-            android:labelFor="@id/pass_input"
-            android:minHeight="48dp"
-            android:padding="12dp"
-            app:layout_constraintBottom_toBottomOf="@+id/username_text"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/username_text"
-            app:layout_constraintTop_toTopOf="@+id/username_text" />
+            android:inputType="textPassword"
+            android:hint="@string/enter_password" />
 
-        <TextView
-            android:id="@+id/password_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="36dp"
-            android:background="@color/teal_200"
-            android:padding="12dp"
-            android:text="@string/password"
-            android:textColor="#004D40"
-            android:textSize="16sp"
-            app:layout_constraintEnd_toEndOf="@+id/username_text"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/username_text"
-            app:layout_constraintTop_toBottomOf="@+id/username_text" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
 
 
-        <EditText
-            android:id="@+id/pass_input"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:hint="@string/enter_password"
-            android:importantForAutofill="no"
-            android:inputType="numberPassword"
-            android:minHeight="48dp"
-            android:padding="12dp"
-            app:layout_constraintBottom_toBottomOf="@+id/password_text"
-            app:layout_constraintEnd_toEndOf="@+id/user_input"
-            app:layout_constraintStart_toStartOf="@+id/user_input"
-            app:layout_constraintTop_toTopOf="@+id/password_text" />
-
-        <TextView
-            android:id="@+id/login_welcome"
-            android:layout_width="208dp"
-            android:layout_height="83dp"
-            android:layout_marginTop="175dp"
-            android:background="@color/purple_200"
-            android:paddingTop="12dp"
-            android:text="@string/login"
-            android:textAlignment="center"
-            android:textColor="#5E35B1"
-            android:textSize="40sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <Button
-            android:id="@+id/login_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="@string/login"
-            android:textSize="30sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/pass_input"
-            app:layout_constraintStart_toStartOf="@+id/pass_input"
-            app:layout_constraintTop_toBottomOf="@+id/pass_input"
-            tools:ignore="DuplicateSpeakableTextCheck" />
-
-        <Button
-            android:id="@+id/signup_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="52dp"
-            android:text="@string/signup"
-            android:textSize="30sp"
-            app:layout_constraintBottom_toBottomOf="@+id/login_btn"
-            app:layout_constraintEnd_toStartOf="@+id/login_btn"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/login_btn" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-</ScrollView>
 
