--- a/app/src/main/res/layout/activity_firstpage.xml
+++ b/app/src/main/res/layout/activity_firstpage.xml
@@ -66,7 +66,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="40dp"
             android:layout_marginEnd="16dp"
-            android:onClick="@{viewmodel::onLoginBtnClick}"
+            android:onClick="@{() -> viewmodel.onLoginBtnClick()}"
             android:text="@string/login"
             android:textSize="30sp"
             app:layout_constraintBottom_toBottomOf="@+id/signup_btn"
