--- a/app/src/main/res/layout/fragment_basic_frag.xml
+++ b/app/src/main/res/layout/fragment_basic_frag.xml
@@ -54,6 +54,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/tab_view"
+            android:onClick="@{() -> viewmodel.onTabLayoutBtnClick()}"
             app:layout_constraintBottom_toBottomOf="@+id/next_page"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/next_page"
