--- a/app/src/main/res/layout/activity_firstpage.xml
+++ b/app/src/main/res/layout/activity_firstpage.xml
@@ -82,6 +82,7 @@
             android:layout_marginStart="24dp"
             android:layout_marginTop="64dp"
             android:text="@string/signup"
+            android:onClick="@{() -> viewmodel.onSignupBtnCLick()}"
             android:textSize="30sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/password_text" />
